fix back to top icon on mobile screens

--- a/src/css/NavLinkCSSModule.module.css
+++ b/src/css/NavLinkCSSModule.module.css
@@ -36,3 +36,9 @@
     cursor: pointer;
     font-size: 2rem;
 }
+
+.linksContainer {
+    @media (max-width: 500px) {
+        margin-right: 2rem;
+    }
+}
